erDiagram
    Users {
        ObjectId _id PK
        string user_id UK
        string email UK
        string hashed_password
        string full_name
        boolean is_active
        boolean is_superuser
        object preferences
        datetime last_login
        datetime created_at
        datetime updated_at
        boolean email_verified
        datetime last_active
        int login_attempts
        string reset_password_token
        datetime reset_password_expires
        string verification_token
        datetime account_locked_until
        string subscription_status
        datetime subscription_expires
    }

    Profiles {
        ObjectId _id PK
        string user_id FK
        object personal_information
        object signature
        string life_story
        datetime created_at
        datetime updated_at
    }

    Portfolios {
        ObjectId _id PK
        string user_id FK
        object career_summary
        array work_experience
        array skills
        array education
        array projects
        array awards
        array publications
        array certifications
        datetime created_at
        datetime updated_at
    }

    Resumes {
        ObjectId _id PK
        string user_id FK
        ObjectId portfolio_id FK
        string company_name
        string job_title
        text job_description
        json selected_sections
        string model_type
        string model_name
        float temperature
        blob resume_pdf
        text cover_letter_content
        blob cover_letter_pdf
        datetime created_at
        datetime updated_at
    }

    Templates {
        ObjectId _id PK
        string name UK
        string type
        text content
        boolean is_default
        datetime created_at
        datetime updated_at
    }

    Users ||--|| Profiles : has
    Users ||--o{ Portfolios : owns
    Users ||--o{ Resumes : creates
    Portfolios ||--o{ Resumes : used_in
    Resumes ||--|| Templates : uses
